--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- Bootstrap 3.3.7 -->
-  <link rel="stylesheet" href="themes/bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://er1an9.github.io/themes/bower_components/bootstrap/dist/css/bootstrap.min.css">
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="themes/bower_components/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://er1an9.github.io/themes/bower_components/font-awesome/css/font-awesome.min.css">
   <!-- Ionicons -->
-  <link rel="stylesheet" href="themes/bower_components/Ionicons/css/ionicons.min.css">
+  <link rel="stylesheet" href="https://er1an9.github.io/themes/bower_components/Ionicons/css/ionicons.min.css">
   <!-- Theme style -->
-  <link rel="stylesheet" href="themes/dist/css/AdminLTE.min.css">
+  <link rel="stylesheet" href="https://er1an9.github.io/themes/dist/css/AdminLTE.min.css">
   <!-- AdminLTE Skins. Choose a skin from the css/skins
        folder instead of downloading all of them to reduce the load. -->
-  <link rel="stylesheet" href="themes/dist/css/skins/_all-skins.min.css">
+  <link rel="stylesheet" href="https://er1an9.github.io/themes/dist/css/skins/_all-skins.min.css">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -32,7 +32,7 @@
 
   <header class="main-header">
     <!-- Logo -->
-    <a href="themes/index2.html" class="logo">
+    <a href="https://er1an9.github.io/themes/index2.html" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>A</b>LT</span>
       <!-- logo for regular state and mobile devices -->
@@ -64,7 +64,7 @@
                   <li><!-- start message -->
                     <a href="#">
                       <div class="pull-left">
-                        <img src="themes/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                        <img src="https://er1an9.github.io/themes/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                       </div>
                       <h4>
                         Support Team
@@ -135,13 +135,13 @@
           <!-- User Account: style can be found in dropdown.less -->
           <li class="dropdown user user-menu">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <img src="themes/dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
+              <img src="https://er1an9.github.io/themes/dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
               <span class="hidden-xs">Alexander Pierce</span>
             </a>
             <ul class="dropdown-menu">
               <!-- User image -->
               <li class="user-header">
-                <img src="themes/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                <img src="https://er1an9.github.io/themes/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
 
                 <p>
                   Alexander Pierce - Web Developer
@@ -192,7 +192,7 @@
       <!-- Sidebar user panel -->
       <div class="user-panel">
         <div class="pull-left image">
-          <img src="themes/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+          <img src="https://er1an9.github.io/themes/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
           <p>Alexander Pierce</p>
@@ -221,8 +221,8 @@
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="themes/index.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
-            <li><a href="themes/index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
+            <li><a href="https://er1an9.github.io/themes/index.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
+            <li><a href="https://er1an9.github.io/themes/index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
           </ul>
         </li>
         <li class="treeview">
@@ -706,17 +706,17 @@
 <!-- ./wrapper -->
 
 <!-- jQuery 3 -->
-<script async="" src="//www.google-analytics.com/analytics.js"></script><script src="themes/bower_components/jquery/dist/jquery.min.js"></script>
+<script async="" src="//www.google-analytics.com/analytics.js"></script><script src="https://er1an9.github.io/themes/bower_components/jquery/dist/jquery.min.js"></script>
 <!-- Bootstrap 3.3.7 -->
-<script src="themes/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="https://er1an9.github.io/themes/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <!-- SlimScroll -->
-<script src="themes/bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script>
+<script src="https://er1an9.github.io/themes/bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script>
 <!-- FastClick -->
-<script src="themes/bower_components/fastclick/lib/fastclick.js"></script>
+<script src="https://er1an9.github.io/themes/bower_components/fastclick/lib/fastclick.js"></script>
 <!-- AdminLTE App -->
-<script src="themes/dist/js/adminlte.min.js"></script>
+<script src="https://er1an9.github.io/themes/dist/js/adminlte.min.js"></script>
 <!-- AdminLTE for demo purposes -->
-<script src="themes/dist/js/demo.js"></script>
+<script src="https://er1an9.github.io/themes/dist/js/demo.js"></script>
 <script>
   $(document).ready(function () {
     $('.sidebar-menu').tree()
